Events - click, double click, mousemove (offsetX and offsetY)

--- a/index.html
+++ b/index.html
@@ -1,25 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>First Vue.js App</title>
-  <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
-  <link rel="stylesheet" href="style.css">
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>First Vue.js App</title>
+    <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+    <link rel="stylesheet" href="styles.css">
+  </head>
+  <body>
 
-  <div id="vue-app">
-    <h1>{{ greet('afternoon') }}</h1>
-    <h1>Name: {{ name }}</h1>
-    <p>Job: {{ job }} </p>
+    <div id="vue-app">
+      <h1>Events</h1>
+      <button v-on:click="add(1)">Add a year</button>
+      <button v-on:click="subtract(1)">Subtract a year</button>
+      <button v-on:dblclick="add(10)">Add 10 years</button>
+      <button v-on:dblclick="subtract(10)">Subtract 10 year</button>
+      <p>My age is {{ age }} </p>
 
-    <a v-bind:href="website">Sandro's website</a>
-    <p v-html="websiteTag"></p>
+      <div id="canvas" v-on:mousemove="updateXY">{{ x }}, {{ y }}</div>
 
-    <input type="text" v-bind:value="name">
-  </div>
-  <script src="app.js"></script>
+    </div>
 
-</body>
+    <script src="app.js"></script>
+  </body>
 </html>
