Event modifiers - once, prevent

--- a/index.html
+++ b/index.html
@@ -11,13 +11,14 @@
 
     <div id="vue-app">
       <h1>Events</h1>
-      <button v-on:click="add(1)">Add a year</button>
+      <button v-on:click.once="add(1)">Add a year</button>
       <button v-on:click="subtract(1)">Subtract a year</button>
       <button v-on:dblclick="add(10)">Add 10 years</button>
       <button v-on:dblclick="subtract(10)">Subtract 10 year</button>
       <p>My age is {{ age }} </p>
 
       <div id="canvas" v-on:mousemove="updateXY">{{ x }}, {{ y }}</div>
+      <a v-on:click.prevent="click" href="https://www.facebook.com/sandro.blavicki.9">Sandro's website</a>
 
     </div>
 
