--- a/index.html
+++ b/index.html
@@ -10,18 +10,16 @@
   <body>
 
     <div id="vue-app">
-      <h1>Dynamic CSS</h1>
-      <h2>Example 1</h2>
-      <!--<div v-on:click="available=!available" v-bind:class="{available: available}">
-        <span>Sandro</span>
-      </div>-->
+      <h1>Conditionals</h1>
+      <button v-on:click="error=!error">Toggle Error</button>
+      <button v-on:click="success=!success">Toggle Success</button>
+      <!--<p v-if="error">There has been an error</p>
+      <p v-else-if="success">There has been an success</p>-->
 
-      <h2>Example 2</h2>
-      <button v-on:click="nearby=!nearby">Toggle nearby</button>
-      <button v-on:click="available=!available">Toggle available</button>
-      <div v-bind:class="compClasses">
-        <span>Sandro</span>
-      </div>
+      <p v-show="error">There has been an error</p>
+      <p v-show="success">There has been an success</p>
+
+
     </div>
 
     <script src="app.js"></script>
