--- a/index.html
+++ b/index.html
@@ -10,14 +10,24 @@
   <body>
 
     <div id="vue-app">
-      <h1>Conditionals</h1>
-      <button v-on:click="error=!error">Toggle Error</button>
-      <button v-on:click="success=!success">Toggle Success</button>
-      <!--<p v-if="error">There has been an error</p>
-      <p v-else-if="success">There has been an success</p>-->
+      <h1>Looping with v-for</h1>
+      <ul>
+        <li v-for="character in characters">{{ character }}</li>
+      </ul>
+      <ul>
+        <li v-for="(ninja, index) in ninjas">{{ index }} . {{ ninja.name }} - {{ ninja.age }}</li>
+      </ul>
+      <!-- Template does not create new elements like div does -->
+      <template v-for="(ninja, index) in ninjas">
+        <h3>{{ index }}. {{ ninja.name }}</h3>
+        <p>{{ ninja.name }}</p>
+      </template>
 
-      <p v-show="error">There has been an error</p>
-      <p v-show="success">There has been an success</p>
+      <template v-for="ninja in ninjas">
+        <div v-for="(val,key) in ninja">
+          <p>{{ key }} - {{ val }}</p>
+        </div>
+      </template>
 
 
     </div>
