Multiple Vue instances

--- a/index.html
+++ b/index.html
@@ -9,25 +9,15 @@
   </head>
   <body>
 
-    <div id="vue-app">
-      <!-- bag image -->
-      <div id="bag" v-bind:class="{burst: ended}">
+    <div id="vue-app-one">
+      <h2>{{ title }}</h2>
+      <p>{{ greet }}</p>
+    </div>
 
-      </div>
-
-      <!-- bag health -->
-      <div id="bag-health">
-        <div v-bind:style="{width : health + '%'}">
-
-        </div>
-      </div>
-
-      <!-- game controls -->
-      <div id="controls">
-        <button v-on:click="punch()" v-show="!ended">Punch</button>
-        <button v-on:click="restart()">Restart</button>
-
-      </div>
+    <div id="vue-app-two">
+      <h2>{{ title }}</h2>
+      <p>{{ greet }}</p>
+      <button v-on:click="changeTitle">Change app one title</button>
     </div>
 
     <script src="app.js"></script>
